--- a/src/html/metamaskconnection.html
+++ b/src/html/metamaskconnection.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MetaMask Integration</title>
-    <link rel="stylesheet" href="/src/css/metamaskconnection.css">
+    <link rel="stylesheet" href="/metamaskconnection.css">
 </head>
 <body>
     <button id="connectButton">Connect to MetaMask</button>
     <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
-    <script src="/src/js/metamaskconnection.js"></script>
+    <script src="/metamaskconnection.js"></script>
 
 </body>
 </html>
