--- a/src/html/transection.html
+++ b/src/html/transection.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spedy Transaction Interface</title>
-    <link rel="stylesheet" href="/src/css/transection.css">
+    <link rel="stylesheet" href="/transection.css">
 </head>
 <body>
     <h1>Spedy Transaction Interface</h1>
@@ -17,7 +17,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.0/web3.min.js"></script>
     <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
-    <script src="/src/js/transection.js"></script>
+    <script src="/transection.js"></script>
 </body>
 </html>
 
